[package]
name = "wef-backend-winit-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
winit = "0.30"
raw-window-handle = "0.6"
libloading = "0.8"
rfd = "0.15"
muda = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile", "NSMenu", "NSMenuItem", "NSResponder", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
