[package]
name = "just-wef"
version = "0.1.0"
edition = "2021"
description = "Just a Web embedded framework"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }

[build-dependencies]
bindgen = { version = "0.72", features = ["runtime"] }
