[package]
name = "ddcore_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wef = { path = "../../capi" }
deno_core = "0.382"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
dirs = "5"
